--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3 Architects</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css">
   </head>
   <body>
     <!-- header start -->
@@ -14,14 +15,12 @@
           <div class="logo">
             <h3><a href="">G3 Architects</a></h3>
           </div>
-          <nav>
             <ul>
               <li><a href="">Home</a></li>
               <li><a href="">About</a></li>
               <li><a href="">Contact Us</a></li>
               <li><a href="">Login</a></li>
             </ul>
-          </nav>
         </nav>
         <!-- banner start -->
         <div class="banner">
